fix: Remove full width header in markdown (temporarily)
A change introduced in atom v1.0.11 does not allow this kind of style when show-invisible is activated. 
This feature is temporarily removed, waiting for another solution

--- a/styles/languages/markdown.less
+++ b/styles/languages/markdown.less
@@ -1,4 +1,4 @@
-atom-text-editor::shadow .source.gfm .markup {
+.source.gfm .markup {
 
   &.heading {
 
@@ -12,32 +12,32 @@ atom-text-editor::shadow .source.gfm .markup {
     }
 
     &.heading-1 {
-      display: block;
+      //display: block;
       background: rgba(52, 82, 102, 0.3);
     }
 
     &.heading-2 {
-      display: block;
+      //display: block;
       background: rgba(52, 82, 102, 0.25);
     }
 
     &.heading-3 {
-      display: block;
+      //display: block;
       background: rgba(52, 82, 102, 0.2);
     }
 
     &.heading-4 {
-      display: block;
+      //display: block;
       background: rgba(52, 82, 102, 0.15);
     }
 
     &.heading-5 {
-      display: block;
+      //display: block;
       background: rgba(52, 82, 102, 0.1);
     }
 
     &.heading-6 {
-      display: block;
+      //display: block;
       background: rgba(52, 82, 102, 0.1);
     }
   }
@@ -63,7 +63,7 @@ atom-text-editor::shadow .source.gfm .markup {
   }
 
   &.comment.hr.gfm {
-    display: block;
+    //display: block;
     border-bottom: 1px solid #666;
     color: rgba(60,60,60,0.5);
   }
@@ -74,7 +74,7 @@ atom-text-editor::shadow .source.gfm .markup {
 
   &.code .support.gfm {
     color: rgb(137, 99, 146);
-    display: block;
+    //display: block;
     border-bottom: 1px solid rgba(138, 102, 148, 0.43);
   }
 }
